documentation pour faire l'installeur